test/files/neg/override.check
override.scala:9: error: overriding type T >: Int <: Int (defined in trait A);
 type T >: String <: String (defined in trait B) has incompatible type
  lazy val x : A with B = {println(""); x}
               ^
one error found
